# anotherBashShell

./: CMakeLists.txt  main.c
commands/cache/: cache.c  cache.h
commands/current_working_dir/: current_working_dir.c  current_working_dir.h
commands/file_attributes/: file_attributes.c  file_attributes.h
commands/list_directory/: list_directory.c  list_directory.h
commands/walking_dir/: walking_dir.c  walking_dir.h
helpers/: b_tree.c  b_tree.h  error_another_bash_shell.h  join_str.c  join_str.h  readable_bytes.c  readable_bytes.h
tests/: file_attributes_test.c  join_str_test.c  join_str_test.h
